<resources>
    <string name="app_name">TurboInhaler Dose Counter</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_take_dose">Take dose</string>
    <string name="button_missed_dose">Missed dose</string>
    <string name="button_history">History</string>
    <string name="button_import_data">Import data</string>
    <string name="button_export_data">Export data</string>
    <string name="timer_info_message">Do not take another dose until</string>
    <string name="timer_message">%d:%02d</string>
    <string name="timer_message_default">0:00</string>
    <string name="dose_message">Doses today: %d</string>
    <string name="dose_message_info">Doses today: %d</string>
    <string name="dose_message_with_24hour">Doses today: %1$d (%2$d in last 24hr)</string>
    <string name="safe_dose_message">Safe to take another dose</string>
    <string name="last_dose_message">Last dose: %s</string>
    <string name="no_previous_doses_message">No previous doses</string>
    <string name="dose_summary_message">%s</string>
    <string name="no_import_data">No data to import</string>
    <string name="import_cancelled">Data import cancelled</string>
    <string name="import_data_message">Do you wish to import %d records</string>
    <string name="yes_dialog_button">yes</string>
    <string name="no_dialog_button">no</string>
    <string name="today_text">today</string>
    <string name="yesterday_text">yesterday</string>
    <string name="days_ago_text">%d days ago</string>
    <string-array name="menus_array">
        <item>Dose</item>
        <item>History</item>
        <item>Import/Export</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_settings">Settings</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
</resources>
