<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.toadordragon.turboinhalerdosecounter.fragments.MainFragment">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:id="@+id/dose_message_info"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="25dp"
                android:hint="@string/dose_message_info"/>
        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/mainTakeDoseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_take_dose"
                android:textSize="20dp"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/mainMissedDoseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_missed_dose"
                android:textSize="20dp"
                android:textAllCaps="false"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView android:id="@+id/last_dose"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="20dp"
                android:hint="@string/last_dose_message"
                android:gravity="center"/>
            <TextView android:id="@+id/dose_summary"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_below="@+id/last_dose"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
