<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.toadordragon.turboinhalerdosecounter.fragments.DoseTakenFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_display_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.toadordragon.turboinhalerdosecounter.activities.DoseTakenActivity">
        <TextView android:id="@+id/dose_message"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:hint="@string/dose_message"/>
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView android:id="@+id/timer_info_message"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:hint="@string/timer_info_message"/>
                <TextView android:id="@+id/timer_message"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="80dp"
                    android:hint="@string/timer_message_default"
                    android:gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>
